Intro to arrays and conditionals

--- a/shopping-list-starter/index.html
+++ b/shopping-list-starter/index.html
@@ -27,6 +27,14 @@
                             id="new-item-button"
                             type="button"
                             value="Submit"
+                            onclick="addItem()"
+
+                        />
+                        <input
+                            id="clear-item-button"
+                            type="button"
+                            value="Clear"
+                            onclick="clearItems()"
                         />
                     </div>
                 </div>
