--- a/simple-message-starter/index.html
+++ b/simple-message-starter/index.html
@@ -19,6 +19,15 @@
                 type="text"
                 placeholder="Your message here..."
             />
+        </div>
+        <div id="name-input">
+            <input
+                id="name-text"
+                type="text"
+                placeholder="Your name here..."
+            />
+        </div>
+        <div id="submit-button">
             <input type="button" value="Submit" onclick="showMessage()" />
         </div>
         <div id="output"></div>
