--- a/meme-generator-starter/index.html
+++ b/meme-generator-starter/index.html
@@ -15,7 +15,7 @@
         <h1>Meme Generator</h1>
         <div id="image-url-input" class="inputs">
             <input id="image-url" type="text" placeholder="Image URL here..." />
-            <input type="button" value="Submit" />
+            <input type="button" value="Submit" onclick="getImage()" />
         </div>
         <div id="meme-builder">
             <div id="meme-image-wrapper"></div>
